2007-08-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/xml-template.scm
	  Procedure xml-template->sxml now can take '() or #f as
	  replacing element and they are handled as empty node.

2007-08-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-httpd.scm, src/kahua/server.scm
	  Content-type of .xml document, rss node and xml node
	  is now application/xml instead of text/xml.

2007-08-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/protocol/worker.scm, src/kahua/protocol/http.scm,
	          src/kahua/server.scm, test/server.scm, cgi/kahua.cgi.in
	  Now cookie handling fit RFC2965 more.

	* Change: src/kahua/config.scm.in
	  Configurable item "session-domain" added.  It can have :site,
	  :bridge, :worker or session range URI or path(string). Default
	  value is :site.

2007-08-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/protocol/http.scm, src/kahua/protocol/worker.scm,
	          src/kahua/server.scm
	  Procedures path->path-info, path-info->abs-path, normalize-path,
	  rel-path-info are moved from kahua.protocol.http to
	  kahua.protocol.worker module,  and simplify-path-info is out
	  of path->path-info and exported.  So kahua-self-uri is use
	  simplify-path-info instead of simplify-path(of file.util).

	* Fix: examples/login/login.kahua
	  Build URI of redirect location using kahua-self-uri-full
	  intead of ad-hoc path building.

	* Fix: src/kahua/server.scm
	  Build path of return-cont or remote-cont using kahua-self-uri
	  instead of ad-hoc path building.

2007-08-06  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  kahua-stale-proc(kahua-default-stale-proc now) return with 404
	  HTTP status,  and default error handler (kahua-default-error-proc
	  now) return with 500 HTTP status.

2007-08-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.6 released.

2007-07-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: doc/Mudoles/kahua.user.ja, doc/Modules/kahua.server.ja